# NesPower

./: .gitignore  CMakeLists.txt
NesPower/: CMakeLists.txt  main.c
NesPower/include/: controls.h  cpu.h  mapper.h  ppu.h  tracer.h  types.h
NesPower/src/: controls.c  cpu.c  mapper.c  ppu.c  tracer.c
tests/: nestest.nes.deb
